# gpui-minimal-md-editor

./: Cargo.toml  LICENSE  README.md
assets/keymaps/: default-macos.json
src/: actions.rs  cursor.rs  editor.rs  editor_element.rs  keymap.rs  line_layout.rs  main.rs  mod.rs  piece_table.rs  state.rs  workspace.rs
