[package]
name = "minimal-text-editor-gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"